--- a/Servicios.html
+++ b/Servicios.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link href="../css/estilo.css" rel="stylesheet" type="text/css"/>
+	<link href="estilo.css" rel="stylesheet" type="text/css"/>
 	<meta name="viewport" contents="width=device-width, initial-scale-1.6">
 </head>
 <body>
