--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link href="../css/estilo.css" rel="stylesheet" type="text/css"/>
+	<link href="estilo.css" rel="stylesheet" type="text/css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -26,7 +26,7 @@
 	    </section>
 	    <section id="seccion">
 	    	<header id="subtitulo2">Nuestra Agencia de Empleo</header>
-	    	<img src="../img/empleados.png" id="imagen"/>
+	    	<img src="empleados.png" id="imagen"/>
 	    	<aside id="ladoderecho">
 	    		<p>
 	    		Acá encontrarás la forma más fácil de encontrar a la trabajadora del
